[tool.poetry]
name = "lakera-langchain-integration"
version = "0.0.1"
description = ""
authors = ["Frawa Vetterli <fv@lakera.ai>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
langchain = "^0.0.354"
langchain-core = "^0.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
black = "^23.12.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
